--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ android {
             versionNameSuffix ' DEV'
             resValue "string", "app_name", "Life Diary DEV"
             buildConfigField "String", "WEATHER_API_BASE_URL", "\"https://community-open-weather-map.p.rapidapi.com/\""
+            buildConfigField "String", "WEATHER_API_ICON_URL", "\"https://openweathermap.org/img/wn/\""
             buildConfigField "String", "WEATHER_API_KEY", "\"a887b82d6bmsh6ffb3f8e2cfd6dfp1381cejsnd65ae9d93061\""
             buildConfigField "String", "WEATHER_API_HOST", "\"community-open-weather-map.p.rapidapi.com\""
         }
@@ -52,6 +53,7 @@ android {
             resValue "string", "app_name", "Life Diary DEMO"
             signingConfig signingConfigs.demo
             buildConfigField "String", "WEATHER_API_BASE_URL", "\"https://community-open-weather-map.p.rapidapi.com/\""
+            buildConfigField "String", "WEATHER_API_ICON_URL", "\"https://openweathermap.org/img/wn/\""
             buildConfigField "String", "WEATHER_API_KEY", "\"a887b82d6bmsh6ffb3f8e2cfd6dfp1381cejsnd65ae9d93061\""
             buildConfigField "String", "WEATHER_API_HOST", "\"community-open-weather-map.p.rapidapi.com\""
         }
@@ -63,6 +65,7 @@ android {
             resValue "string", "app_name", "Life Diary"
             signingConfig signingConfigs.release
             buildConfigField "String", "WEATHER_API_BASE_URL", "\"https://community-open-weather-map.p.rapidapi.com/\""
+            buildConfigField "String", "WEATHER_API_ICON_URL", "\"https://openweathermap.org/img/wn/\""
             buildConfigField "String", "WEATHER_API_KEY", "\"a887b82d6bmsh6ffb3f8e2cfd6dfp1381cejsnd65ae9d93061\""
             buildConfigField "String", "WEATHER_API_HOST", "\"community-open-weather-map.p.rapidapi.com\""
         }
@@ -113,4 +116,5 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
 
     implementation 'net.danlew:android.joda:2.10.9.1'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
 }
