--- a/app/build.gradle
+++ b/app/build.gradle
@@ -121,4 +121,6 @@ dependencies {
 
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
     implementation 'com.github.kizitonwose:CalendarView:1.0.3'
+
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
 }
