--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
         <activity
             android:name=".ui.activity.MainActivity" />
 
+        <receiver android:name=".data.receivers.AlarmReceiver" />
+
     </application>
 
 </manifest>
