--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         </activity>
 
         <activity
-            android:name=".ui.activity.MainActivity" />
+            android:name=".ui.activity.MainActivity"
+            android:windowSoftInputMode="adjustResize" />
 
         <receiver android:name=".data.receivers.AlarmReceiver" />
 
