--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,12 +27,11 @@
 
         <activity
             android:name=".ui.activity.MainActivity"
-            android:exported="true"
+            android:exported="false"
             android:windowSoftInputMode="adjustResize"
             android:screenOrientation="portrait" />
 
         <receiver android:name=".data.receivers.AlarmReceiver" />
 
     </application>
-
 </manifest>
