--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,10 +41,8 @@ android {
             applicationIdSuffix '.dev'
             versionNameSuffix ' DEV'
             resValue "string", "app_name", "Life Diary DEV"
-            buildConfigField "String", "WEATHER_API_BASE_URL", "\"https://community-open-weather-map.p.rapidapi.com/\""
-            buildConfigField "String", "WEATHER_API_ICON_URL", "\"https://openweathermap.org/img/wn/\""
-            buildConfigField "String", "WEATHER_API_KEY", "\"a887b82d6bmsh6ffb3f8e2cfd6dfp1381cejsnd65ae9d93061\""
-            buildConfigField "String", "WEATHER_API_HOST", "\"community-open-weather-map.p.rapidapi.com\""
+            buildConfigField "String", "WEATHER_API_BASE_URL", "\"http://api.weatherapi.com/v1/\""
+            buildConfigField "String", "WEATHER_API_KEY", "\"8e9f5be52a614295935122422222708\""
         }
 
         demo {
@@ -53,10 +51,8 @@ android {
             versionNameSuffix ' DEMO'
             resValue "string", "app_name", "Life Diary DEMO"
             signingConfig signingConfigs.demo
-            buildConfigField "String", "WEATHER_API_BASE_URL", "\"https://community-open-weather-map.p.rapidapi.com/\""
-            buildConfigField "String", "WEATHER_API_ICON_URL", "\"https://openweathermap.org/img/wn/\""
-            buildConfigField "String", "WEATHER_API_KEY", "\"a887b82d6bmsh6ffb3f8e2cfd6dfp1381cejsnd65ae9d93061\""
-            buildConfigField "String", "WEATHER_API_HOST", "\"community-open-weather-map.p.rapidapi.com\""
+            buildConfigField "String", "WEATHER_API_BASE_URL", "\"http://api.weatherapi.com/v1/\""
+            buildConfigField "String", "WEATHER_API_KEY", "\"8e9f5be52a614295935122422222708\""
         }
 
         release {
@@ -65,10 +61,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             resValue "string", "app_name", "Life Diary"
             signingConfig signingConfigs.release
-            buildConfigField "String", "WEATHER_API_BASE_URL", "\"https://community-open-weather-map.p.rapidapi.com/\""
-            buildConfigField "String", "WEATHER_API_ICON_URL", "\"https://openweathermap.org/img/wn/\""
-            buildConfigField "String", "WEATHER_API_KEY", "\"a887b82d6bmsh6ffb3f8e2cfd6dfp1381cejsnd65ae9d93061\""
-            buildConfigField "String", "WEATHER_API_HOST", "\"community-open-weather-map.p.rapidapi.com\""
+            buildConfigField "String", "WEATHER_API_BASE_URL", "\"http://api.weatherapi.com/v1/\""
+            buildConfigField "String", "WEATHER_API_KEY", "\"8e9f5be52a614295935122422222708\""
         }
     }
 
