--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,6 +110,9 @@ dependencies {
     implementation "androidx.room:room-ktx:2.4.0-alpha04"
     kapt "androidx.room:room-compiler:2.4.0-alpha04"
 
+
+    implementation 'com.google.code.gson:gson:2.8.8'
+
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
